# bottles

./: README.md  meson.build
data/: com.github.linuxhubit.bottles.appdata.xml.in  com.github.linuxhubit.bottles.gschema.xml  meson.build
po/: POTFILES
src/: bottles.in  meson.build
